# flucs

./: .git-blame-ignore-revs  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: format_and_lint.yml  lint.yml  tests.yml
docs/: api.rst  conf.py  index.rst
src/flucs/: __init__.py  diagnostic.py  flucs.py  input.py  output.py  postprocessing.py  restart.py
src/flucs/.nvim/: dap.lua
src/flucs/diagnostics/: diagnostic.py  output.py
src/flucs/output/: __init__.py  flucs_diagnostic.py  flucs_output.py
src/flucs/solvers/: __init__.py  flucs_solver.py  flucs_solver_state.py
src/flucs/solvers/fourier/: __init__.py  defaults.toml  fourier.cu  fourier.cuh  fourier_solver.py  fourier_system.cuh  fourier_system.py  fourier_system.toml  fourier_system_diagnostics.py  fourier_system_forcing.cuh  fourier_system_forcing.py  fourier_system_hyperdissipation.cuh  fourier_system_indexing.cuh  fourier_system_reductions.cuh  fourier_system_utilities.cuh  system.py
src/flucs/solvers/fourier/postprocessing/: plot_0d_vs_time.py  plot_linear_eigensystem.py  plot_realspace_data.py
src/flucs/systems/: __init__.py  flucs_restart_manager.py  flucs_system.py  flucs_system.toml
src/flucs/systems/cold_itg_2d_fourier/: cold_itg_2d_fourier.cu  cold_itg_2d_fourier.py  cold_itg_2d_fourier_diagnostics.py  cold_itg_2d_fourier_output.py  defaults.toml
src/flucs/systems/cold_itg_2d_fourier/postprocessing/: plot_heatflux_vs_time.py
src/flucs/utilities/: clean_directory.py  cupy.py  log_handler.py  messages.py  smooth_numbers.py  threesmooth.py
tests/: conftest.py  test_input.py  test_plugins.py
tests/__testdata__/: cold_itg_2d_fourier.toml
tests/utilities/: test_smooth_numbers.py
