[project]
name = "flucs"
version = "0.0"
description = "Framework for solving fluid models of plasmas"
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."flucs.solvers"]
FourierSolver = "flucs.solvers.fourier.fourier_solver:FourierSolver"

[project.entry-points."flucs.systems"]
ColdITG2DFourier = "flucs.systems.cold_itg_2d_fourier.cold_itg_2d_fourier:ColdITG2DFourier"

[project.scripts]
flucs = "flucs.flucs:run_flucs"
