[project]
name = "flucs"
description = "Framework for solving fluid models of plasmas"
authors = [
    {name = "P. G. Ivanov"}, 
    {name = "T. Adkins", email = "tadkins@pppl.gov"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/flucs/_version.py"   # create this at build/install time
fallback_version = "0.0"    

[project.entry-points."flucs.solvers"]
FourierSolver = "flucs.solvers.fourier.fourier_solver:FourierSolver"

# [project.entry-points."flucs.systems"]
# ColdITG2DFourier = "flucs.systems.cold_itg_2d_fourier.cold_itg_2d_fourier:ColdITG2DFourier"

[project.entry-points."flucs.output"]
netcdf4 = "flucs.output:FlucsOutputNC"
text = "flucs.output:FlucsOutputText"

[project.scripts]
flucs = "flucs.flucs:main"
