[project]
name = "flucs"
description = "Framework for solving fluid models of plasmas"
authors = [
    {name = "T. Adkins", email = "tadkins@pppl.gov"},
    {name = "P. G. Ivanov"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "netCDF4",
    "toml",  # Should use built-in tomllib when Python 3.11 is the minimum
]
dynamic = ["version"]

# Must install with one of these
[project.optional-dependencies]
cuda11 = ["cupy-cuda11x"]
cuda12 = ["cupy-cuda12x"]
cuda13 = ["cupy-cuda13x"]

# Developer dependencies
# Install with `pip install . --group dev`
[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
]
lint = [
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.ruff]
line-length = 80

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/flucs/_version.py"   # create this at build/install time
fallback_version = "0.0"    

[project.entry-points."flucs.solvers"]
FourierSolver = "flucs.solvers.fourier.fourier_solver:FourierSolver"

# [project.entry-points."flucs.systems"]
# ColdITG2DFourier = "flucs.systems.cold_itg_2d_fourier.cold_itg_2d_fourier:ColdITG2DFourier"

[project.entry-points."flucs.output"]
netcdf4 = "flucs.output:FlucsOutputNC"
text = "flucs.output:FlucsOutputText"

[project.scripts]
flucs = "flucs.flucs:main"

